# usbgen

./: CMakeLists.txt  LICENSE  README.md  usbgen_src.h
descriptors/: Configuration.def  Configuration.h  Descriptors.def  Descriptors.h  Device.def  Device.h  DeviceQualifier.def  Endpoint.def  Interface.def  String.h  Types.h
descriptors/audio/: ASIsochronousDataEndpoint.def  ControlHeader.h  Descriptors.def  Descriptors.h  FeatureUnit.h  FormatTypeI.h  InputTerminal.def  IsochronousDataEndpoint.h  OutputTerminal.def  StreamingInterface.def  Types.h
descriptors/msc/: Descriptors.h  Types.h
examples/: CMakeLists.txt  main.c  microphone.cpp
include/: ApplicatorMacro.h  BaseTypes.h  Composite.h  CompositeMacro.h  Descriptor.h  DescriptorMacro.h  Std.h  UndefMacro.h
